[package]
name = "clickhouse-proxy"
version = "0.1.0"
authors = ["Michal Nowikowski <godfryd@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
tokio =  { version = "1.8.4", features = ["full"] }
clickhouse = "0.5.1"
reflection = "0.1.3"
reflection_derive = "0.1.1"
chrono = "*"