[tool.poetry]
name = "kraken-client"
version = "0.0"
description = ""
authors = ["Michal Nowikowski <godfryd@gmail.com>"]

packages = [
  { include = "kraken" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
click = "^7.1.2"
tabulate = "^0.8.9"

[tool.poetry.scripts]
kkci = 'kraken.client.main:main'

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
