[tool.poetry]
name = "kraken"
version = "0.0"
description = ""
authors = ["Michal Nowikowski <godfryd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
connexion = "^2.7.0"
Flask = "^1.1.0"
Flask-SQLAlchemy = "^2.4.0"
psycopg2-binary = "^2.8"
redis = "3.5.3"
requests = "2.25.0"
SQLAlchemy = "^1.3.0"
swagger-ui-bundle = "^0.0.8"
apscheduler = "^3.6.0"
pytimeparse = "^1.1.8"
python-dateutil = "^2.8.0"
gunicorn = "^20.0.4"
RestrictedPython = "5.0"
alembic = "^1.4.2"
pyftpdlib = "^1.5.5"
giturlparse = "^0.9.2"
clickhouse-driver = "^0.1.5"
minio = "^7.0.0"
passlib = "^1.7.4"
sentry-sdk = {extras = ["flask"], version = "^0.20.0"}
boto3 = "^1.17.62"
jsonschema = "^3.2.0"
rq = "^1.8.1"
azure-mgmt-resource = "^19.0.0"
azure-mgmt-compute = "^23.0.0"
azure-mgmt-network = "^19.0.0"
azure-mgmt-storage = "^18.0.0"
azure-identity = "^1.6.1"
azure-mgmt-subscription = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
pudb = "^2021.1"

[tool.poetry.scripts]
# kkserver = 'kraken.server.server:main' # this does not work due to flask problems
kkscheduler = 'kraken.server.scheduler:main'
kkplanner = 'kraken.server.planner:main'
kkwatchdog = 'kraken.server.watchdog:main'
kkrq = 'kraken.server.kkrq:main'
kkqneck = 'kraken.server.qneck:main'
kkdbmigrate = 'kraken.migrations.apply:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
